# openeo-processes-python

./: README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
src/openeo_processes/: __init__.py  arrays.py  bitwise.py  comparison.py  cubes.py  errors.py  logic.py  math.py  utils.py
src/openeo_processes/extension/: odc.py  product_model.py
tests/: conftest.py  test_arrays.py  test_bitwise.py  test_comparison.py  test_cubes.py  test_logic.py  test_math.py
tests/data/: array.nc  out.time.nc
